# blaze-dem-gpu

./: .gitignore  LICENSE  README.md
.claude/: settings.local.json
SOFTX-D-15-00085/: CMakeLists.txt  CMakePresets.json  README.md  Simulation.KSim
SOFTX-D-15-00085/Projects/1.Particles_Box/ParticleObjects/: Bead_1cm.POBJ  Bead_1cm4.POBJ  Poly_1cm.POBJ
SOFTX-D-15-00085/Projects/2.Silo/ParticleObjects/: Poly_1cm.POBJ
SOFTX-D-15-00085/Projects/2.Silo/VolumeObjects/: Floor_Left_D.DOBJ  Floor_Right_D.DOBJ
SOFTX-D-15-00085/Projects/3.BallMill/LifterObjects/: Square_Lifter16.DOBJ
SOFTX-D-15-00085/Projects/3.BallMill/ParticleObjects/: Ball_5cm.POBJ  Ball_5cmFill.POBJ
SOFTX-D-15-00085/Projects/4.UnitTests/ParticleObjects/: Cube_1cm.POBJ  Octa_5cm_TC.POBJ  Poly_1cm_K.POBJ  Rock_2.5cm.POBJ  Rock_2.5cm_TC.POBJ  Rock_5cm.POBJ  Rock_5cm_TC.POBJ  Sphere_5cm_K.POBJ  Sphere_5cm_TC.POBJ  Water_1cm.POBJ  Water_1cm_TC.POBJ
SOFTX-D-15-00085/Projects/4.UnitTests/VolumeObjects/: Long.DOBJ  LongX.DOBJ  Square_Lifter16.DOBJ
SOFTX-D-15-00085/Projects/5.noCohesion/ParticleObjects/: Sphere.POBJ
SOFTX-D-15-00085/Projects/5.noCohesion/SurfaceObjects/: Cylinder.WOBJ
SOFTX-D-15-00085/Projects/5.noCohesion/World/: noCohesion.World
SOFTX-D-15-00085/V_02_2015/: Make_Linux.sh
SOFTX-D-15-00085/V_02_2015/src/: main.cpp  main.h
SOFTX-D-15-00085/V_02_2015/src/DataStructures/: KSimulationObjects.h
SOFTX-D-15-00085/V_02_2015/src/Device/: DeviceInterface.cu
SOFTX-D-15-00085/V_02_2015/src/Graphics/: Graphics.h
SOFTX-D-15-00085/tools/: compare_results.py  liggghts_to_blazedem.py
(+8 files in other folders)
